--- a/doc/ハッシュって何？.md
+++ b/doc/ハッシュって何？.md
@@ -76,7 +76,7 @@ PythonにMD5のライブラリあって良かった
 # 実装タイム
 
 ---
-# 10年間までは主力だった
+# 10年前までは主力だった
 
 - MD5は使わない方がいい。
 	- 今すぐに壊滅的な被害がでるわけではないが、何年か後には分析されてしまう可能性がある。
